# openharness

./: .editorconfig  .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  NOTICE  README.md  SECURITY.md  package-lock.json  package.json  tsconfig.base.json  vite.config.ts  vitest.config.ts
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  pages.yml
apps/desktop/: README.md  package.json  vite.config.ts
apps/desktop/src/: index.ts  server.test.ts  server.ts  sidecar-save.test.ts  sidecar.test.ts  sidecar.ts
apps/desktop/src-tauri/: Cargo.toml  tauri.conf.json
apps/desktop/src-tauri/src/: main.rs
apps/tui/: package.json
docs/: ARCHITECTURE.md  AUTHORING.md  DEMO.md  GATEWAY.md  ROADMAP.md  RUNLOCAL.md  vision.md
docs/specs/: 2026-07-13-governance-dataplane-design.md  2026-07-13-walking-skeleton-design.md  2026-07-14-desktop-onboarding-design.md  2026-07-14-remote-mcp-gateway-design.md  2026-07-16-gateway-deploy-hardening-design.md  2026-07-18-openwork-rebase-design.md
harnesses/_prompts/: ops-base.md  platform-eng-base.md
harnesses/acme-fintech/: README.md  harness.json  policy.json  system-prompt-acme.md  system-prompt.md
harnesses/acme-gateway/: README.md  harness.json  policy.json  system-prompt.md
harnesses/example/: harness.json  policy.json  system-prompt.md
harnesses/meridian-support/: README.md  harness.json  policy.json  system-prompt.md
harnesses/northwind-ops/: README.md  harness.json  policy.json  system-prompt.md
site/: index.html
(+22 files in other folders)
